<resources>
    <string name="manual8name">Как выжить при обстреле</string>
    <string name="manualtwo_header">Корректировка огня артиллерии</string>
    <string name="manualtwo_text1">Для решения боевых задач артиллерия применяет следущие виды огня: Огонь по отдельной цели - огонь батареи, взвода или орудия (миномета, боевой машины, установки ПТУР), ведущийся самостоятельно с закрытой ОП или прямой наводкой.\n
Сосредоточенный огонь- огонь, ведущийся одновременно несколькими батареями по одной цели.\n
Заградительный огонь - сплошная огневая завеса, создаваемая перед фронтом атакующего (контратакующего) противника.\n
В каждом конкретном случае порядок выполнения огневой задачи, способ обстрела, расход боеприпасов могут определяться не только руководящими документами, но и требованиями обстановки на поле боя. Это порой изменяет содержание того или иного огня, тогда возникают новые понятия:\n
отсекающий огонь;\n
блокирующий огонь;\n
прочесывающий огонь;\n
огневое окаймление;\n
изнуряющий огонь;\n
беспокоящий огонь и т.п.\n
По местам, где скрытно располагается живая сила противника, (лесным массивам, лесным полосам, кустарникам и т.п.), может проводиться огневое прочесывание.\n
В ходе блокирования баз боевиков артиллерия может осуществлять огневое блокирование\n
</string>
    <string name="manualtwo_text2">В целях исключения поражения своих войск необходимо постоянно знать положение противника и своих войск, допустимые границы ведения огня артиллерией, а также сигналы обозначения положения своих войск, вызова и прекращения огня!. Для предотвращения возможности поражения своих войск при стрельбе на поражение без пристрелки по целям, расположенным вблизи от них, учитывают удаление своих войск от целей (ближней границы групповой цели)\n</string>
    <string name="manualtwo_text3">(Максимальный радиус разлёта убойных осколков при разрыве снаряда калибра 152 мм включительно при установке взрывателя на осколочное действие для не укрытого и незащищенного личного состава составляет 200 м, а для личного состава укрытого в БТР, БМП и т.п.., -60 м. При разрыве снарядов калибра крупнее 152 мм эти радиусы составляют 250 и 150 м соответственно.)\n</string>
    <string name="manualtwo_headertwo">Поражение целей стрельбой с закрытой огневой позиции</string>
    <string name="manualtwo_text4">Пристрелка цели наиболее точный способ поражения цели. Ее применяют при поражении целей, неспособных сменить свое местоположение в короткий срок, и когда внезапность открытия огня не имеет решающего значения.Пристрелку обеспечивают надежным и непрерывным наблюдением разрывов, при этом определяют (оценивают) отклонения разрывов от цели по дальности в метрах (знаки разрывов) и по направлению в делениях угломера (тысячных). Пристрелку цели проводят: с помощью дальномера, по наблюдению знаков разрывов, последовательными контролями по странам света (пксс), по графику, а также с помощью секундомера.\n</string>
    <string name="manualtwo_text5">Основной тип корректирование артиллерии с БПЛА – последовательный контроль по странам света .\n
Порядок пристрелки с последователиным контролем по сторонам света.\n
</string>
    <string name="manualtwo_text6">Определив направление севера с НП, координаты и размеры цели передают их на огневую позицию и назначают одиночный выстрел. Определяют на основе глазомерной оценки отклонение разрыва от центра цели в метрах по направлениям С - Ю (север – юг) и З – В (запад - восток) передают их на огневую позицию и назначают следующий выстрел или переходят к стрельбе на поражение. Корректирование огня в ходе стрельбы на поражение производят также, как и при пристрелке цели принимая отклонения разрывов: при стрельбе по цели глубиной менее 100 м: при получении преобладания перелетов ( недолетов) – 25 м, при получении всех перелетов (недолетов) – 50 м;\n</string>
    <string name="manualthree_header">Действия в районах минной опасности</string>
    <string name="manualthree_text">При подготовке к выполнению боевой задачи личный состав группы должен быть ознакомлен с образцами минно-взрывных средств применяемых противником и своими войсками, способами, вариантами и разведпризнаками их установки, правилами установки, обезвреживания и преодоления минно-взрывных заграждений.\n\n
Кроме того, группа изучает минную обстановку в районе разведки и на маршруте переброски-вывода, а при действиях на местности, командир группы дополнительно указывает группе участки минно-взрывных заграждений установленных своими войсками, участки вероятного минирования противником и места установки мин своими разведчиками.\n\n
Обо всех случаях обнаружения установленных противником, или своими войсками минно-взрывных средств, командир группы докладывает в Центр или выславшему его командиру.\n\n
Обнаруженные в ходе проведения рейда минно-взрывных заграждения, как правило, обходятся. Преодоление рейдовой группой минно-взрывных заграждений, установленных своими войсками, допускается только по специально проделанным и обозначенных проходам.\n\n
При этом группа должна сопровождаться представителями подразделения, установившего минно-взрывные заграждения, или проделавшего в них проходы.\n\n
Это правило должно неукоснительно выполняться при выдвижении группы в район разведки через позиции своих войск, вывод через линию фронта, или боевого соприкосновения, и возвращении группы с выходом на передний край своих войск.\n\n
Во всех остальных случаях, преодоление рейдовой группой минно-взрывных заграждений допускается лишь в критических условиях боевой обстановки, когда обход их не возможен, с обязательным использованием штатных, или подручных средств разведки и преодоления этих заграждений.\n\n
Трогать, или обезвреживать обнаруженные в ходе проведения рейда взрывоопасные предметы, кроме специально оговоренных случаев, категорически запрещается.\n\n
Помните, противник может устанавливать мины-ловушки, маскируя их под различные привлекающие внимание предметы — радиоаппаратуру, военное имущество, продукты питания и так далее.\n\n
</string>
    <string name="manualthree_header2">Минирование и постановка ловушек</string>
    <string name="manualthree_text2">Ловушки, эффективны, когда их предполагаемая жертва вынуждена появиться в том месте, где они установлены. Поэтому такими местами выбирают:\n\n
1. узкие дороги и дефиле;\n
2. местность, подходящую для засад;\n
3. окрестности контрольно-пропускных пунктов;\n
4. залы ожидания и выходы из них;\n
5. оставленные магазины и склады;\n
6. подступы к полевым укреплениям;\n
7. взлетно-посадочных полосы, вероятные места посадки вертолетов и высадки десантов;\n
8. окрестности зданий неправительственных организаций, таких как клиники или центры распределения продовольствия;\n
9. мосты, пешеходные переходы;\n
10. окрестности лагерей беженцев;\n
11. пункты обеспечения водой;\n
12. склады взрывчатых и горючих веществ.\n
</string>
    <string name="manualthree_header3">Признаки минирования и постановки ловушек</string>
    <string name="manualthree_text3">Они включают:\n\n
• знаки, отмечающие границы установленных военнослужащими минных полей;\n\n
• повреждения дорожного покрытия и насыпей, песок или грунт, разбросанный по траве, проседания грунта, особенно после дождя;\n\n
• поврежденную или увядшую растительность, что указывает на попытку маскировки;\n\n
• необычные знаки, такие как сложенные камни, проткнутые прутами листья, ветви, сломанные, чтобы служить указателями, связанная узлом трава, отметки спреем на стволах деревьев или стенах;\n\n
• наличие проводов, протянутых на уровне лодыжек;\n\n
• меры, заставляющие изменить обычный маршрут транспортных средства или пешеходов;\n\n
• коробки, обертки, и прочий упаковочный материал от боеприпасов;\n\n
• трупы животных, людей с признаками взрывных травм, транспортные средства с взрывными повреждениями;\n\n
• не имеющие видимых повреждений, но оставленные без присмотра транспортные средства, пригодное для использования оружие, бинокли, посуда, электротовары, пищевые продукты;\n\n
• свободный ход половиц, признаки рытья, недавней кладки кирпичей, наличие полостей в стенах.
</string>
    <string name="manualeight_text1">Поражающие факторы артиллерийских и ракетных систем:\n
Взрывная волна;\n
Осколки;\n
Вторичные осколки;\n
</string>
    <string name="manualeight_text2">Первоочередная задача для вас – поиск укрытия.</string>
    <string name="manualeight_text3">Можно спрятаться в следующих местах:\n
— Вдоль высокого бордюра или фундамента забора;\n
— В очень глубоком подвале под капитальными домами старой застройки (желательно, чтобы он имел 2 выхода);\n
— В ямах-«воронках», оставшихся от предыдущих обстрелов или авианалетов.\n
— В любой канаве, траншеи или яме;\n
— В широкой трубе водостока под дорогой (не стоит лезть слишком глубоко, максимум на 3-4 метра);\n\n
Никогда не следует прятаться снаружи под стенами современных зданий! Нынешние бетонные «коробки» не имеют ни малейшего запаса прочности и легко рассыпаются (или «складываются») не только от прямого попадания, но и даже от сильной взрывной волны: есть большой риск оползней и завалов. Нельзя также прятаться под стенами офисов и магазинов: от взрывной волны сверху будет падать много стекла; это не менее опасно, чем металлические осколки снарядов.\n\n
При обстреле, если вы находитесь в здание необходимо как можно дальше отойти от окон вглубь помещения, при возможности спуститься на нижние этажи. Попадания в здание артиллерийских снарядов часто приходится на крышу дома, это обуславливает опасность нахождения на верхних этажах.\n\n
Если обстрел застал вас в машине или ином транспорте необходимо незамедлительно покинуть автомобиль. Ни в коем случае не укрывайтесь за машиной. Отбегите от дороги и найдите укрытие.\n\n
Во время обстрела необходимо, в первую очередь, правильно оценить ситуацию (наличие укрытий и степень их надежности, расстояние от разрывов до вашего местоположения) и действовать хладнокровно. Панику и внутри себя и снаружи надо пресекать, не считаясь ни с чем. Паника это смерть и увечья, наступающие внезапно и мучительно.\n\n
Ecли вo вpeмя apтoбcтpeлa быcтpo залечь, мoжнo нe пocтpaдaть, дaжe нaxoдяcь вблизи oт взpывa. Hужнo oбязaтeльнo пpикpывaть pукaми гoлoву. Держите рот открытым – это пoзвoлит вaм избeжaть cepьёзныx тpaвм бapaбaннoй пepeпoнки, cлуxoвoгo кaнaлa и ушнoй paкoвины.\n\n
После окончания обстрела (бомбардировки)\n
Оставляя место убежища, не давайте себе расслабиться. Теперь всё ваше внимание должно быть сконцентрировано себе под ноги! Не поднимайте с земли никаких незнакомых вам предметов: авиабомба, ракета или снаряд могли быть кассетными.\n\n
Боевые элементы часто разрываются при падении, но могут взорваться позже. Кстати, в отличие от обычных фугасных противопехотных и противотанковых мин неразорвавшиеся боевые элементы кассет лучше не расстреливать из стрелкового оружия с расстояния кажущегося безопасным. Кумулятивная струя по воздуху летит очень далеко, даже если она не полностью сформирована, а куда она полетит после попадания пули в боеприпас предсказать нельзя.\n\n
</string>
    <string name="aboutpage_text1">Project alpha 0.0.2</string>
    <string name="aboutpage_text2">Приложение находится на начальной стадии разработки, поэтому возможны непридвиденные ошибки.</string>
    <string name="aboutpage_text3">О всех ошибках и проблемах приложение, а также о ваших идеях и предложениях сообщать по контактам обратной связи\n</string>
    <string name="aboutpage_text4">Обратная связь: @project_uraniumbot</string>
    <string name="aboutpage_text5">Канал проекта: @project_uran\n</string>
    <string name="aboutpage_text6">Поддержать рублём:</string>
    <string name="aboutpage_text7">5228600586359368 — Сбербанк</string>
    <string name="aboutpage_text8">Попов И.С</string>
    <string name="geodesia_text1">Координаты начальной точки:</string>
    <string name="geodesia_text2">Координаты конечной точки:</string>
    <string name="geodesia_textbutton">Рассчитать</string>
    <string name="geodesia_radiotext">Тип задачи:</string>
</resources>