<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Manualtwo"
    tools:ignore="SpeakableTextPresentCheck">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10sp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manualtwo_header"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/textheader"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manualtwo_text1"
            android:textColor="@color/black"
            android:textSize="@dimen/textmain"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manualtwo_text2"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/textmain"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manualtwo_text3"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="@dimen/textmain"/>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manualtwo_headertwo"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/textheader"
            android:textStyle="bold"
            tools:text="@string/manualtwo_headertwo" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manualtwo_text4"
            android:textColor="@color/black"
            android:textSize="@dimen/textmain"/>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manualtwo_text5"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/textmain"/>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manualtwo_text6"
            android:textColor="@color/black"
            android:textSize="@dimen/textmain"/>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/pkss" />
    </LinearLayout>
</ScrollView>