<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.slideshow.SlideshowFragment"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/aboutpage_text1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            >

            <TextView
                android:id="@+id/textView38"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutpage_text1"
                android:textColor="@color/black"
                android:textSize="@dimen/textmain"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/textView39"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutpage_text2"
                android:textColor="@color/black"
                android:textSize="@dimen/textmain" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutpage_text3"
                android:textColor="@color/black"
                android:textSize="@dimen/textmain" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:onClick="channelclicked">

                <TextView
                    android:id="@+id/textView41"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutpage_text4"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textmain"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView42"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutpage_text5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textmain"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/qrcode" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical"
                android:padding="10dp"
                android:onClick="cardclicked">


                <TextView
                    android:id="@+id/textView43"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutpage_text6"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView44"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutpage_text7"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView45"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutpage_text8"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="italic" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/text_Slideshow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>