<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Geodesia"
    android:orientation="vertical"
    android:layout_margin="10dp">


    <TextView
        android:id="@+id/textView47"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/geodesia_text1"
        android:textColor="@color/black"
        android:textSize="@dimen/textmain" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="TouchTargetSizeCheck"
        android:hint="Долгота"/>

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Широта"/>

    <TextView
        android:id="@+id/textView48"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:text="@string/geodesia_text2"
        android:textColor="@color/black"
        android:textSize="@dimen/textmain"
        android:paddingTop="40sp"/>

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Долгота"/>

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Широта"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/geodesia_textbutton"
        android:onClick="geodataclicked"/>

    <TextView
        android:id="@+id/textresult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/textmain"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>