<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Geodesiastraight"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">>

        <TextView
            android:id="@+id/textView46"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/geodesia_radiotext"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="Прямая"
            android:textAlignment="viewStart" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="3dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="Обратная"
            android:onClick="radiobuttonclicked2"/>

    </RadioGroup>

    <TextView
        android:id="@+id/textView50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/geodesia_text1"
        android:textColor="@color/black"
        android:textSize="@dimen/textmain" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:ems="10"
        android:hint="Долгота"
        android:inputType="none" />

    <EditText
        android:id="@+id/editTextNumberDecimal2"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:ems="10"
        android:hint="Широта"
        android:inputType="none" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Расстояние:"
        android:textColor="@color/black"
        android:textSize="@dimen/textmain" />

    <EditText
        android:id="@+id/editTextNumberDecimal3"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:ems="10"
        android:hint="В метрах"
        android:inputType="none" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Азимут:"
        android:textColor="@color/black"
        android:textSize="@dimen/textmain" />

    <EditText
        android:id="@+id/editTextNumberDecimal4"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:ems="10"
        android:hint=" В градусах "
        android:inputType="none" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/geodesia_textbutton"
        android:onClick="buttonstraighttask"/>

    <TextView
        android:id="@+id/londot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/textmain" />

    <TextView
        android:id="@+id/latdot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/textmain" />

</LinearLayout>